Chore: Replace `File` with `Path` in `XSLTransformer` and `BerliozConfig` for improved modern I/O handling; mark old constructors and methods as deprecated